# filestash-minio-oidc-auth

./: .env.defaults  .env.example  Dockerfile  README.md  main.ts  pyproject.toml  renovate.json
.github/workflows/: ci.yml  docker-publish.yml
filestash_minio_oidc_auth/: __main__.py  settings.py
